gitops/okd-console/console.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okd-console
  labels:
    app: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console-app
          image: "quay.io/openshift/origin-console:5.1"
---
kind: Service
apiVersion: v1
metadata:
  name: okd-console
spec:
  selector:
    app: console
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd-console
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
    - evergreen-console.buc.sh
    secretName: cert-evergreen-console-buc-sh
  rules:
  - host: evergreen-console.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okd-console
            port:
              number: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd-console-http
spec:
  rules:
  - host: evergreen-console.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okd-console
            port:
              number: 9000
